--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "sass": "^1.77.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",    
+    "build:sass": "sass --watch src/components:src/components"
+   
   },
   "eslintConfig": {
     "extends": [
